[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["{{ author-name }} <{{ author-email }}>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/{{ project-name }}"
repository = "https://github.com/{{ github-username }}/{{ project-name }}"
homepage = "https://github.com/{{ github-username }}/{{ project-name }}"
description = "{{ project-description }}"
readme = "README.md"
categories = ["development-tools"]
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
